<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green_theme"/>



    </android.support.design.widget.AppBarLayout>

<!--    <ImageView
        android:id="@+id/profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/actionbar"
        android:background="@drawable/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/Buttons"
        android:layout_below="@+id/appbar"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"

        >


            <!--Scrollview below header and above footer-->
            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                <LinearLayout
                    android:id="@+id/linear_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/name_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/user_pic"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="10dp"
                        android:theme="@style/TextLabel">
                        <EditText android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/full_name"
                            android:textColorHint="#fff"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_name"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/email_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/user_pic"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="10dp"
                        android:theme="@style/TextLabel">
                        <EditText android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email"
                            android:textColorHint="#fff"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linear_email"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:id="@+id/pswd_icon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/user_pic"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="10dp"
                            android:theme="@style/TextLabel">
                            <EditText android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/password"
                                android:textColorHint="#fff"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_confirm_pswd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linear_password"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:id="@+id/confirm_pswd_icon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/user_pic"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="10dp"
                            android:theme="@style/TextLabel">
                            <EditText android:id="@+id/confirm_pswd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/confirm_password"
                                android:textColorHint="#fff"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/linear_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linear_confirm_pswd"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:id="@+id/mobile_icon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/user_pic"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="10dp"
                            android:theme="@style/TextLabel">
                            <EditText android:id="@+id/mobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/mobile_number"
                                android:textColorHint="#fff"/>
                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>




                </RelativeLayout>

            </RelativeLayout>
            </ScrollView>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Buttons"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true">
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/submit"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="@color/green_theme"
        android:textColor="#fff"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/cancel"
            android:background="@color/green_theme"
            android:textColor="#fff"/>
    </LinearLayout>

</RelativeLayout>
