<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/t1"/>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:layout_below="@+id/spinner"
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/legends"
           />
    <LinearLayout
        android:id="@+id/legends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="3">

        <LinearLayout

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/square"
                android:backgroundTint="@color/date_color"/>
            <TextView
                android:id="@+id/tv_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/events_available"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <TextView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/square"
                android:backgroundTint="@color/waiting"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/waiting_for_approval"
                android:id="@+id/tv_waiting"
                />

        </LinearLayout>

        <LinearLayout

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/square"
                android:backgroundTint="@color/green_theme"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/request_approved"
                android:id="@+id/tv_complete"
                />

        </LinearLayout>


    </LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

</RelativeLayout>